--- a/MyApplication/app/src/main/AndroidManifest.xml
+++ b/MyApplication/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="7 Wonders"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -32,7 +32,7 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".MainActivityDraw"
-            android:label="@string/title_activity_main_draw"
+            android:label="7 Wonders"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
